# asteroids

./: .gitignore  CMakeLists.txt
configs/: asteroids.json
configs/levels/: level_1.json  level_2.json
include/: drawer.h  game_controller.h  game_level.h  game_model.h  game_stats.h  game_view.h  player.h  sdl_controller.h  sdl_drawer.h  sdl_game_controller.h  sdl_game_view.h  sdl_timer.h  sdl_view.h  timer.h
include/collections/: asteroids_collection.h  bullets_collection.h  game_levels_collection.h  ships_collection.h
include/entities/: asteroid.h  bullet.h  collider_view_game_entity.h  game_entity.h  gun.h  moving_particle.h  moving_polygone_particle.h  particle.h  shape_view_game_entity.h  ship.h  sprint_view_game_entity.h  turning_particle.h
include/factories/: asteroid_factory.h  asteroids_factory.h  bullets_factory.h
include/geometry/: geometry.h  polygone.h  polygone_factory.h  shape_with_vertices.h  vec2.h
include/interface/: drawer.h  game_view.h  sdl_game_view.h
include/interface/components/: button.h  sdl_button.h
include/interface/font/: hershey.h  simplex_char.h
include/schemas/: config_schema.h  level_schema.h
lib/Geometry/: CMakeLists.txt
lib/Geometry/include/: Geometry.h  circle.h  circle_collider.h  collider.h  polygone.h  rectangle.h  rectangle_collider.h  shape.h  shape_with_vertices.h  trigonometry.h  vec2.h  vec2_impl.h
lib/Geometry/src/: polygone.cpp  rectangle.cpp  shape_with_vertices.cpp  trigonometry.cpp
lib/SDL2/: Makefile  Makefile.rules  config.status
lib/Utils/: CMakeLists.txt
lib/Utils/include/: Utils.h  color.h  iterable_collection.h  random_generator.h
libraries/Geometry/include/: Geometry.h  circle_collider.h  collider.h  iterable_shape.h  polygone.h  polygone_factory.h  shape.h  shape_with_vertices.h  trigonometry.h  vec2.h  vec2_impl.h
libraries/Geometry/src/: polygone.cpp  polygone_factory.cpp  trigonometry.cpp  vec2.cpp
libraries/SDL2/: CMakeLists.txt  libtool
libraries/SDL2/include/: SDL_config.h
libraries/Utils/include/: color.h  iterable_collection.h  random_generator.h
libraries/Utils/src/: iterable_collection.cpp  random_generator.cpp
src/: asteroid.cpp  asteroid_factory.cpp  asteroids.cpp  bullet.cpp  bullets_factory.cpp  button.cpp  drawer.cpp  game_level.cpp  game_levels_collection.cpp  game_model.cpp  game_view.cpp  gun.cpp  hershey.cpp  moving_polygone_particle.cpp  player.cpp  sdl_button.cpp  sdl_controller.cpp  sdl_drawer.cpp  sdl_game_controller.cpp  sdl_game_view.cpp  sdl_view.cpp  ship.cpp  simplex_char.cpp
src/geometry/: polygone.cpp  polygone_factory.cpp  vec2.cpp
